@@ -1,3 +1,9 @@
+2005-03-11  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* Makefile.am: Remove references to em68klynx.o and esparclynx.o.
+	* Makefile.in: Regenerated.
+	* emulparams/m68klynx.sh, emulparams/sparclynx.sh: Remove.
+
 2005-03-07  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: Updated translation.
